--- a/journal/202101.md
+++ b/journal/202101.md
@@ -34,11 +34,11 @@ And here are the high level steps to upgrade:
 - watch network's upgrade and consensus vote progress [here](https://voting.decred.org/) or [here](https://explorer.dcrdata.org/agenda/treasury)
 - currently using DCRDEX requires some technical skills but this will be simplified in the next releases. In the meantime you can follow this [guide](https://medium.com/decred/how-to-get-on-dcrdex-mvp-816d713ec5c0) by @richardred { is the guide still relevant? }
 
-There are some [known issues](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/) with ticket purchasing in Decrediton v1.6.0 that will be fixed in the upcoming patch release.
+There are some [known issues](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/) with buying tickets in Decrediton v1.6.0 that will be fixed in the upcoming patch release.
 
 ## Development
 
-Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
+The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
 January's updates to dcrd are a good example of what users building [from source](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) can get today without waiting for the next release.
 
@@ -48,7 +48,7 @@ The main effort of the month was to prepare, thoroughly review and test several 
 
 - completely [reworked](https://github.com/decred/dcrd/pull/2518) block indexing and processing to use headers-first semantics and support out of order processing of block data
 - reworked UTXO handling to work on a [per-outpoint](https://github.com/decred/dcrd/pull/2540) basis instead of at a transaction level
-- [sync model](https://github.com/decred/dcrd/pull/2555) reworked to use header announcements. The small 180-byte [headers](https://devdocs.decred.org/developer-guides/block-header-specifications/) will be downloaded before any block data, and then only needed blocks will be downloaded. This optimizes traffic, removes the concept of "orphan blocks", and opens the door for future enhancements.
+- [sync model](https://github.com/decred/dcrd/pull/2555) reworked to use header announcements. The small 180-byte [headers](https://devdocs.decred.org/developer-guides/block-header-specifications/) will be downloaded before any block data, and then only the needed blocks will be downloaded. This optimizes traffic, removes the concept of "orphan blocks", and opens the door for future enhancements.
 - preparations for implementing UTXO cache
 
 Other changes:
@@ -71,7 +71,7 @@ In progress:
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 - VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores
-- narrow [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin (used when detecting wallet's mixed account during recovery from seed)
+- narrowed [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin (used when detecting wallet's mixed account during recovery from seed)
 
 The above changes were also backported to the v1.6 release.
 
@@ -80,7 +80,7 @@ The above changes were also backported to the v1.6 release.
 - new page showing a list of [unspent](https://github.com/decred/decrediton/pull/3098) outputs (UTXOs)
 - show VSPs in [random](https://github.com/decred/decrediton/pull/3114) order
 - update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts, and seed restores
-- remove usage of [CSRF](https://github.com/decred/decrediton/pull/3133) tokens when communicating to Politeia, to prevent privacy leaks
+- removed usage of [CSRF](https://github.com/decred/decrediton/pull/3133) tokens when communicating to Politeia, to prevent privacy leaks
 - [auto-detect](https://github.com/decred/decrediton/pull/3033) if the wallet used mixing in the past
 - UI hints for [RFP](https://github.com/decred/decrediton/pull/3118) proposals and submissions
 - updated translations
@@ -92,9 +92,9 @@ Most of the above changes were included in the v1.6 release and the rest will la
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- show basic [proposal rules](https://github.com/decred/politeiagui/pull/2290) before the Submit button
-- remove calls to [dcrdata](https://github.com/decred/politeia/pull/1360) from politeiavoter command-line tool
 - UI for setting up and verifying [TOTP](https://github.com/decred/politeiagui/pull/2127) codes for 2FA
+- show basic [proposal rules](https://github.com/decred/politeiagui/pull/2290) before the Submit button
+- removed calls to [dcrdata](https://github.com/decred/politeia/pull/1360) from politeiavoter command-line tool
 
 CMS:
 
@@ -104,8 +104,8 @@ CMS:
 
 **[vspd](https://github.com/decred/vspd)**
 
-- make sending of ticket's [parent](https://github.com/decred/vspd/pull/218) transaction mandatory as it greatly reduces the chance of ticket broadcast errors
-- update dependencies
+- sending of ticket's [parent](https://github.com/decred/vspd/pull/218) transaction was made mandatory as it greatly reduces the chance of ticket broadcast errors
+- updated dependencies
 
 vspd [version 1.0.0](https://github.com/decred/vspd/releases/tag/release-v1.0.0) is now tagged and all VSP operators should upgrade their mainnet deployment.
 
@@ -134,7 +134,7 @@ Merged work:
 - support [switching](https://github.com/decred/dcrdex/pull/901) from unencrypted to an encrypted BTC wallet
 - client-side fee rate [limits](https://github.com/decred/dcrdex/pull/874)
 - sample [config](https://github.com/decred/dcrdex/pull/927) files
-- validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning too high a fee
+- validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning a too high fee
 - fixed several issues with address validation, wallet locking, login, etc, and backported them to the v0.1.4 release
 
 A total of 32 PRs from 7 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-01-01..2021-01-31+sort%3Aupdated-asc), adding 3K and deleting 1K lines of code.
@@ -145,7 +145,7 @@ Congratulations to the DCRDEX team with the stunning 98% Yes votes!
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- initial CoinShuffle++ [mixing](https://github.com/planetdecred/dcrandroid/pull/520) support: when enabled, generating receiving addresses for the mixed account and sending funds from the change account are disabled
+- initial CoinShuffle++ [mixing](https://github.com/planetdecred/dcrandroid/pull/520) support (CSPP): when enabled, generating receiving addresses for the mixed account and sending funds from the change account are disabled
 - Privacy [UI pages](https://github.com/planetdecred/dcrandroid/pull/529): introduction, help popup, display of unmixed balance, CSPP server details, mixing progress, etc
 - Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503) support: see a list of proposals and their vote status, open a specific proposal and receive notifications on new proposals, vote start and finish
 - debug page to view details about connected [peers](https://github.com/planetdecred/dcrandroid/pull/501)
@@ -164,7 +164,7 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 - added app [Settings](https://github.com/planetdecred/godcr/pull/305) and [Wallet settings](https://github.com/planetdecred/godcr/pull/298) pages
 - new UI for [Sign message](https://github.com/planetdecred/godcr/pull/288) and [Verify message](https://github.com/planetdecred/godcr/pull/286) pages
 - updated headers on pages for a better UX
-- API for overlaying widgets was added to Gio and has been used to achieve the intended UI design and behavior on the Wallets page
+- API for overlaying widgets was added to the [Gio](https://gioui.org/) library and has been used to achieve the intended UI design and behavior on the Wallets page
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
@@ -174,16 +174,16 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[dcrros](https://github.com/decred/dcrros)**
 
-- updated to implement Rosetta spec [v1.4.8](https://github.com/decred/dcrros/pull/15), which requires to track per-account unspent coins
+- updated to match Rosetta spec [v1.4.8](https://github.com/decred/dcrros/pull/15), which requires to track per-account unspent coins
 
 **[docs](https://github.com/decred/dcrdocs)**
 
-- remove the need to run client-side JavaScript to render mathematical values and formulas, render them with plain HTML and CSS, and [remove](https://github.com/decred/dcrdocs/pull/1144) 9 MB of MathJax stuff _(thanks @jholdstock &lt;3)_
+- removed the need to run client-side JavaScript to render mathematical values and formulas, changed to render them with plain HTML and CSS, and [removed](https://github.com/decred/dcrdocs/pull/1144) 9 MB of MathJax stuff _(thanks @jholdstock &lt;3)_
 - partial update for [v1.6](https://github.com/decred/dcrdocs/pull/1142) release (Privacy and LN coming next)
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- added a new sleek [page](https://github.com/decred/dcrweb/pull/941) dedicated to v1.6 [release](https://decred.org/release/)
+- added a new sleek [page](https://github.com/decred/dcrweb/pull/941) dedicated to [v1.6 release](https://decred.org/release/)
 - content updates
 
 **[Decred Address Scanner](https://github.com/JoeGruffins/dcraddrscanner)**
@@ -194,15 +194,15 @@ Status as of Jan 20 [update](https://github.com/decredcommunity/proposals/blob/m
 
 - Decrediton [integration](https://github.com/decred/decrediton/pull/3112) is awaiting review, it will make tickets easier to load into the app
 - [F-Droid](https://github.com/JoeGruffins/dcraddrscanner/issues/6) builds are being investigated
-- compact filter support is in progress but it needs a lot of work (this is the most privacy-preserving way to obtain address information, same way as used by the SPV mode of the other wallets)
-- the project has chosen [Blue Oak](https://blueoakcouncil.org/license/1.0.0) license but this may be revised to fit F-Droid's [requirements](https://github.com/JoeGruffins/dcraddrscanner/issues/6)
+- [Blue Oak](https://blueoakcouncil.org/license/1.0.0) license was chosen but this may change to fit F-Droid's [requirements](https://github.com/JoeGruffins/dcraddrscanner/issues/6)
+- compact filter support is in progress but it needs a lot of work (this is the most privacy-preserving way to obtain address information, the same as used by SPV wallets)
 
 **Other**
 
 - [dcrseeder](https://github.com/decred/dcrseeder) received fixes for [peer](https://github.com/decred/dcrseeder/pull/43) tracking and graceful [shutdown](https://github.com/decred/dcrseeder/pull/41)
 - [release](https://github.com/decred/release) tool was updated to v1.6 and used by multiple developers to reproduced release builds
 - Bug Bounty program [reported](https://bounty.decred.org/2021/01/status-update/) that it has processed a total of 150 submissions and 14 were eligible for a payout
-- development help is [welcome](https://www.reddit.com/r/decred/comments/l3pj90/dcronchain_status/gki371x/) for [dcronchain.com](https://dcronchain.com/) - web app is based on Nuxt.js (Vue.js derivative), source code is [here](https://github.com/Decred-Bulls/dcronchain)
+- development help is [welcome](https://www.reddit.com/r/decred/comments/l3pj90/dcronchain_status/gki371x/) for [dcronchain.com](https://dcronchain.com/) - [the app](https://github.com/Decred-Bulls/dcronchain) is based on Nuxt.js (Vue.js derivative)
 
 ## People
 
