Polish till Media

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -303,10 +303,6 @@ News coverage secured by Monde PR:
 - the Decred v1.6 release was covered by [Bitcoin Exchange Guide](https://bitcoinexchangeguide.com/decred-launches-private-transactions-integrates-lightning-network-decentralizes-treasury/), [Crypto Mode](https://cryptomode.com/decreds-position-as-money-evolved-further-cemented-by-three-new-features/) (syndicated to [Crypto News BTC](https://cryptonewsbtc.org/2021/01/27/decreds-position-as-money-evolved-further-cemented-by-three-new-features-cryptomode/)), [8btc](https://www.8btc.com/article/6589360), [Explica](https://www.explica.co/decred-updates-its-code-and-integrates-the-lightning-network/), [Crypto Briefing](https://cryptobriefing.com/decred-launches-lightning-support-voting-and-mixing/) (syndicated to 6 news outlets including [Techtelegraph](https://www.techtelegraph.co.uk/decred-launches-lightning-support-voting-and-mixing/)) and [Invezz](https://invezz.com/news/2021/01/28/decred-dcr-update-brought-ln-support-voting-and-a-new-privacy-system/) (syndicated to 4 news outlets including [CCNC](https://www.cryptocurrencynewscast.online/2021/01/decred-dcr-update-brought-ln-support.html)).
 - an article in [Modern Consensus](https://modernconsensus.com/commentary/opinion/gamestop-is-defis-golden-moment/) featuring commentary from @jy-p on the GameStop/Robinhood incident
 
-Other non-English content:
-
-- v1.6 release was covered in Cointelegraph [in Spanish](https://es.cointelegraph.com/news/decred-launches-version-16-with-focus-on-sovereignty-privacy-and-lightning-network)
-
 ## Events
 
 Attended:
@@ -320,7 +316,9 @@ Attended:
 Selected articles:
 
 - Decred blockchain analysis - Part 2 PoW wow by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-2/))
-- Crypto Commons 2020 review and v1.0 changelog by @richardred ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/)) - The [cryptocommons.cc](https://cryptocommons.cc/) book received a major update covering selected developments from 2020, and these were also written up as a standalone blog post in the style of an annual review. The idea is that people who already read Peer Production on the Crypto Commons can get the update without reading it all again. While the full post is 18,000 words long there is also a tweet [thread](https://twitter.com/RichardRed0x/status/1346160647923511297) version that's much shorter. Regular readers of the Relevant External section will recognize many of the same stories. One of the main themes of the update is divergence of the "open source movement", with disillusionment apparently growing among people working on more corporate-dominated projects. This contrasts with the crypto space where the number of open source projects, and funding mechanisms for these, are growing in scale and diversity. While the bear market was hard for many projects and saw their efforts scaled back, others were able to continue without a care, and there are always more new forms being invented.
+- Crypto Commons 2020 review and v1.0 changelog by @richardred ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/))
+
+The [cryptocommons.cc](https://cryptocommons.cc/) book received a major update covering selected developments from 2020, and these were also written up as a standalone blog post in the style of an annual review. The idea is that people who already read Peer Production on the Crypto Commons can get the update without reading it all again. While the full post is 18,000 words long there is also a tweet [thread](https://twitter.com/RichardRed0x/status/1346160647923511297) version that's much shorter. Regular readers of the Relevant External section will recognize many of the same stories. One of the main themes of the update is divergence of the "open source movement", with disillusionment apparently growing among people working on more corporate-dominated projects. This contrasts with the crypto space where the number of open source projects, and funding mechanisms for these, are growing in scale and diversity. While the bear market was hard for many projects and saw their efforts scaled back, others were able to continue without a care, and there are always more new forms being invented.
 
 Videos:
 
@@ -333,15 +331,19 @@ Videos:
 
 Art and fun:
 
-- https://twitter.com/decredproject/status/1353780294013353986
-- What did [you do](https://twitter.com/exitusdcr/status/1348385341338742784) for the Decred DAO?
 - v1.6 [release tweet](https://twitter.com/decredproject/status/1353736208065638401) came with a fresh quality animation
+- another release animation with [fewer bits](https://twitter.com/decredproject/status/1353780294013353986) was made for the older audience
+- What did [you do](https://twitter.com/exitusdcr/status/1348385341338742784) for the Decred DAO?
 
 Translations:
 
 - [Iterating privacy](https://blog.decred.org/2019/08/28/Iterating-Privacy/) - [in Spanish](https://medium.com/decred-es/privacidad-iterativa-d4ecef46a9e9) by @francov\_
 - [The Decred structure](https://stakey.club/en/the-decred-structure/) - [in Spanish](https://medium.com/decred-es/la-estructura-de-decred-ad6e56794815) by @francov\_
 - Decred Journal December 2020 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you all for your persistence!
+
+Other non-English content:
+
+- v1.6 release was covered in Cointelegraph [in Spanish](https://es.cointelegraph.com/news/decred-launches-version-16-with-focus-on-sovereignty-privacy-and-lightning-network)
 
 ## Community Discussions
 
