Polish till Markets

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -359,12 +359,12 @@ Selected Reddit posts:
 - "If you could change [one thing](https://www.reddit.com/r/decred/comments/kx201g/if_you_could_change_one_thing_in_how_decred_was/) in how Decred was made, what would it be?"
 - what the [future](https://www.reddit.com/r/decred/comments/kpzieu/any_good_threadslinks_on_what_the_future_of/) of Politeia could look like
 - which programming [languages](https://www.reddit.com/r/decred/comments/kogozc/what_programming_languages_to_learn_to_work_for/) are used at Decred
-- yet another "isn't it dangerous that anyone can vote on code changes?" [question](https://www.reddit.com/r/decred/comments/ktei89/isnt_it_kinda_dangerous_that_anyone_can_vote_on/) collected many thorough answers
-- a bunch of other recurring topics have surfaced like turning Decred into [DeFi](https://www.reddit.com/r/decred/comments/kqqwje/dcrdex_is_impressive/), naming sub-DCR [units](https://www.reddit.com/r/decred/comments/kq0uh2/names_of_the_units_of_decred/), and everyone's favorite topic to [rename Decred](https://www.reddit.com/r/decred/comments/kpjte8/change_decred_name_to_another_without_any/) to something less negative inevitably became month's most commented thread
+- [yet another](https://github.com/decredcommunity/wiki/blob/master/wiki/misconceptions.md#coin-holders-cannot-make-good-decisions) "isn't it dangerous that anyone can vote on code changes?" [question](https://www.reddit.com/r/decred/comments/ktei89/isnt_it_kinda_dangerous_that_anyone_can_vote_on/) collected many thorough answers
+- a few other recurring topics have surfaced: turning Decred into [DeFi](https://www.reddit.com/r/decred/comments/kqqwje/dcrdex_is_impressive/), naming sub-DCR [units](https://www.reddit.com/r/decred/comments/kq0uh2/names_of_the_units_of_decred/), and everyone's favorite idea to [rename Decred](https://www.reddit.com/r/decred/comments/kpjte8/change_decred_name_to_another_without_any/) to something less negative inevitably became month's most commented thread
 
 Selected Twitter discussions:
 
-- https://twitter.com/KingSolomonMine/status/1347581022850846727
+- @geostone [noted](https://twitter.com/KingSolomonMine/status/1347581022850846727) that Decred does not belong to any "feature tokens" yet has many of their features
 - @ammarooni [points out](https://twitter.com/Ammarooni/status/1354961779256864779) that Ray Dalio's latest [thoughts](https://www.bridgewater.com/research-and-insights/ray-dalio-what-i-think-of-bitcoin) recognize the lack of Bitcoin's adaptability
 
 > People who love DCR, really love it :) DCRDEX a big fundamental and market structure catalyst, after brutal bear. Layer in DCR privacy and it’s now one of the most sovereign venues to swap coin.
@@ -373,13 +373,13 @@ Selected Twitter discussions:
 
 ## Markets
 
-In January DCR was trading between USD 39.80-69 / BTC 0.0013-0.0020. The average daily rate was $54.25.
+In January DCR was trading between USD 39.80-69.00 / BTC 0.0013-0.0020. The average daily rate was $54.25.
 
-A colorful [chart](https://twitter.com/_Checkmatey_/status/1347662655830441984) by @Checkmate shows how DCR has stopped following the 5 bigger cryptos in their decline against BTC.
+In a colorful [chart](https://twitter.com/_Checkmatey_/status/1347662655830441984) by @Checkmate showed how DCR has not followed 5 bigger coins in their decline against BTC and even made some gains.
 
 Decred update in Our Network newsletter [issue 56](https://ournetwork.substack.com/p/our-network-issue-56) by @Checkmate and @PermabullNino [highlights](https://twitter.com/_Checkmatey_/status/1355296688026447873) the highest ever inflow of DCR into tickets that supported a doubling in DCR/BTC price. Indicator of price at which DCR was staked shows that only 17% of all staking occurred above $40, suggesting that stakers are in a reasonable profit in USD terms. DCR/BTC breakeven level for stakers is estimated around 0.004 BTC, above which ~60% of all stakers will be in profit.
 
-[checkonchain.com](https://checkonchain.com/dcronchain/unrealisedpnl_oscillator_usd/unrealisedpnl_oscillator_usd_light.html) [added](https://twitter.com/_Checkmatey_/status/1347035560687202307) Unrealized Profit and Loss oscillator that measures the difference between Spot and Realized price as a 'sentiment' measure on how much profit is in the system. @PermabullNino joined to improve the site and posted a quick [walkthrough](https://twitter.com/PermabullNino/status/1351571649548599297) of some interesting charts. For intance, USD Lifetime Ticket Price acts as a historical bull/bear line that was cleared in Jan.
+[checkonchain.com](https://checkonchain.com/dcronchain/unrealisedpnl_oscillator_usd/unrealisedpnl_oscillator_usd_light.html) [added](https://twitter.com/_Checkmatey_/status/1347035560687202307) Unrealized Profit and Loss oscillator that measures the difference between Spot and Realized price as a 'sentiment' measure on how much profit is in the system. @PermabullNino joined to improve the site and posted a quick [walkthrough](https://twitter.com/PermabullNino/status/1351571649548599297) of some interesting charts. For intance, USD Lifetime Ticket Price has acted as a historical bull/bear line that was cleared in January.
 
 [DCRDEX](https://dex.decred.org/) has traded a total of 1.3M DCR and 1.9K BTC over almost 4 months since launch. On average that is roughly 12K DCR / 17 BTC per 24 hours.
 
