--- a/journal/202101.md
+++ b/journal/202101.md
@@ -385,17 +385,17 @@ Decred update in Our Network newsletter [issue 56](https://ournetwork.substack.c
 
 ## Relevant External
 
-Bitcoin Core [0.21.0](https://bitcoincore.org/en/releases/0.21.0/) has been released adding [Taproot](https://bitcoinmagazine.com/articles/taproot-coming-what-it-and-how-it-will-benefit-bitcoin) consensus rules (allows more flexible smart contracts and better privacy) implemented as a soft fork, and support for serving BIP157 compact filters (among other features). Compact filters were [proposed](https://github.com/bitcoin/bips/blob/master/bip-0157.mediawiki) in May 2017 and offered a big improvement to security and privacy of lightweight wallets, compared to the popular Electrum and wallets relying on central servers. In December 2018 the risk of Electrum middleware has materialized and around $4M worth of BTC was [stolen](https://blog.malwarebytes.com/cybercrime/2019/04/electrum-bitcoin-wallets-under-siege/) by hackers. A less obvious problem is the collection of private address and transaction data by ~90 Electrum [servers](https://1209k.com/bitcoin-eye/ele.php?chain=btc) that continues to this day.
+Bitcoin Core [0.21.0](https://bitcoincore.org/en/releases/0.21.0/) has been released with big highlights including [Taproot](https://bitcoinmagazine.com/articles/taproot-coming-what-it-and-how-it-will-benefit-bitcoin) consensus rules (allows more flexible smart contracts and better privacy) implemented as a soft fork, and support for serving BIP157 compact filters. The latter was [proposed](https://github.com/bitcoin/bips/blob/master/bip-0157.mediawiki) in May 2017 and offered a big improvement to security and privacy of light wallets, compared to popular Electrum and wallets relying on central servers to fetch data without validating the full blockchain. In December 2018 the risk of Electrum middleware materialized and around $4M worth of BTC was [stolen](https://blog.malwarebytes.com/cybercrime/2019/04/electrum-bitcoin-wallets-under-siege/) by hackers. A less obvious problem is the collection of private address and transaction data by ~90 Electrum [servers](https://1209k.com/bitcoin-eye/ele.php?chain=btc) that continues to this day.
 
-Light wallets based on compact filters talk to full nodes without middlemen and [don't carry](https://docs.decred.org/wallets/spv/#how-is-this-different-from-a-light-wallet) these risks. Decred added their initial support in [Sep 2018](https://github.com/decred/decred-binaries/releases/tag/v1.3.0) and it was exposed to all users in [Feb 2019](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The second generation of this tech was added in [May 2020](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/#v7) at the consensus level and integrated into wallets in [Jan 2021](https://github.com/decred/decred-binaries/releases/tag/v1.6.0#dcrwallet-v160).
+Light wallets based on compact filters talk to full nodes without middlemen and [don't have](https://docs.decred.org/wallets/spv/#how-is-this-different-from-a-light-wallet) these risks. Decred added their initial support in [Sep 2018](https://github.com/decred/decred-binaries/releases/tag/v1.3.0) and it was exposed to all users in [Feb 2019](https://github.com/decred/decred-binaries/releases/tag/v1.4.0). The second generation of this tech was added in [May 2020](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/#v7) at the consensus level and integrated into wallets in [Jan 2021](https://github.com/decred/decred-binaries/releases/tag/v1.6.0#dcrwallet-v160).
 
 American miner Marathon Patent Group joined DMG Blockchain Solutions to [create](https://www.marathonpg.com/news/press-releases/detail/1220/marathon-patent-group-and-dmg-blockchain-solutions-to-form) a "cooperative mining pool". To benefit the industry, the pool will include "clean block mining" proprietary tech that will "specifically omit any transactions deemed risky by Walletscore, and which may not meet OFAC standards". r/Bitcoin [discussed](https://www.reddit.com/r/Bitcoin/comments/kqyg0l/a_2nd_american_miner_marathon_patent_group_is/) possible countermeasures and claims made by the companies.
 
-Firo (formerly Zcoin) suffered a 51% [attack](https://twitter.com/firoorg/status/1351703001849757697) where the attacker deposited 866K FIRO to Binance , sold them for other coins which they withdrew, then broadcast about 1 day's worth of blocks which wiped out the attacker's deposits. The Firo devs responded by triggering a "Lelantus" switch that prevented the attacker from anonymising their FIRO (which was helpfully all stored in one address), and released an update which blacklisted the attacker's address and added a new rule limiting max reorg depth to 5. While the network updated the attacker and honest miners engaged in a [hash war](https://www.coindesk.com/privacy-coin-firo-currently-experiencing-51-attack), with the attacker trying to mine enough blocks to stay ahead so they could spend their ill-gotten gains.
+Firo (formerly Zcoin) suffered a 51% [attack](https://twitter.com/firoorg/status/1351703001849757697) where the attacker deposited 866K FIRO to Binance, sold them for other coins which they withdrew, then broadcast about 1 day's worth of blocks which wiped out the attacker's deposits. The Firo devs responded by triggering a "Lelantus" switch that prevented the attacker from anonymizing their FIRO (which was helpfully all stored in one address), and released an update which blacklisted the attacker's address and added a new rule limiting max reorg depth to 5. While the network updated the attacker and honest miners engaged in a [hash war](https://www.coindesk.com/privacy-coin-firo-currently-experiencing-51-attack), with the attacker trying to mine enough blocks to stay ahead so they could spend their ill-gotten gains.
 
 BitMEX Research caused a stir when they [tweeted](https://twitter.com/BitMEXResearch/status/1351855414103715842) that Bitcoin had experienced a small double-spend. It was helpfully clarified [by Hasu](https://insights.deribit.com/market-research/was-there-a-bitcoin-double-spend-on-jan-20-2021/) and others that this was not a malicious double-spend attack but rather a benign event where a user happened to be bumping the fee on their transaction when a stale block occurred and the original transaction was expunged from the blockchain.
 
-Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development. YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in defi sucks. 
+Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development. YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in DeFi sucks. 
 
 Tether has [printed](https://www.coindesk.com/tether-mints-record-2b-usdt-in-one-week) a record number of USDT. Total supply of stablecoins is [exploding](https://twitter.com/PermabullNino/status/1354545678437912579) and issuance patterns [correlate](https://twitter.com/PermabullNino/status/1352278182288793607) with crypto prices.
 
@@ -403,9 +403,9 @@ Reddit subreddit r/wallstreetbets broke into the [mainstream](https://www.bloomb
 
 Elon Musk was [credited](https://www.coindesk.com/bitcoin-price-falls-retraces-elon-musk-twitter) with pumping the BTC price after he tweeted support for Bitcoin, and later [repeated](https://twitter.com/elonmusk/status/1357231313376456708) the same trick with Dogecoin, presumably for his own amusement.
 
-Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA, identity, database providers and ultimately Amazon Web Services, showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators will learn from this and prepare for such events in advance.
+Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was nothing new, but a quick deplatforming by 2FA, identity, database providers and ultimately Amazon Web Services, showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully, developers and node operators will learn from this and prepare for such events in advance.
 
-Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) Element app without notice and upon clarification their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content was not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is that this was a gentle reminder to reduce dependency on the ephemeral Google Play, and switch to [F-Droid](https://f-droid.org/en/packages/im.vector.app/) or self-hosted [APKs](https://twitter.com/element_hq/status/1355331704781742082).
+Google [suspended](https://twitter.com/element_hq/status/1355290296947499013) the Element app without notice. Upon clarification request their representative [explained](https://twitter.com/element_hq/status/1355663753380032512) that "the suspension was triggered by a report of extremely abusive content accessible on the matrix.org server". As usual in such cases, the exact instance of content was not referenced for the public's verification that the strike was fair. The app was restored ~1 hour later. A more positive interpretation is that this was a gentle reminder to reduce dependency on the ephemeral Google Play, and switch to [F-Droid](https://f-droid.org/en/packages/im.vector.app/) or self-hosted [APKs](https://twitter.com/element_hq/status/1355331704781742082).
 
 Good news for censorship fighters, the [youtube-dl](https://github.com/ytdl-org/youtube-dl) repository that was taken down via RIAA's request, was restored after an impressive [push back](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/) involving creative ways to share censored code.
 
